--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,16 @@
             <artifactId>taglibs-standard-impl</artifactId>
             <version>1.2.5</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version> <!-- Use the latest version -->
+        </dependency>
     </dependencies>
+
+
+
 
 </project>
