making few changes

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,20 @@
             <artifactId>jakarta.validation-api</artifactId>
             <version>3.0.2</version> <!-- Use the latest version -->
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>7.0.1.Final</version> <!-- Ensure version compatibility -->
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.el</artifactId>
+            <version>4.0.0</version> <!-- Or any compatible version -->
+        </dependency>
+
+
     </dependencies>
 
 
